Fix stretching project images on home page.

--- a/src/components/ProjectList/ProjectList.css
+++ b/src/components/ProjectList/ProjectList.css
@@ -37,6 +37,7 @@
   border: 1.5px solid #222222;
   border-radius: 0.25rem;
   cursor: pointer;
+  object-fit: cover;
 }
 
 .project-info {
